service-discovery/statistics-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statistics-service
  template:
    metadata:
      labels:
        app: statistics-service
    spec:
      containers:
        - name: statistics-service
          image: docker-repo/statistics-service:latest
          ports:
            - containerPort: 9090
