service-discovery/news-feed-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-feed-service
spec:
  selector:
    app: news-feed-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
  type: ClusterIP
