service-discovery/statistics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics-service
spec:
  selector:
    app: statistics-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
  type: ClusterIP
